--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>commons-cli</artifactId>
             <version>1.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
